src/styles/prose.css
.prose a:hover {
  text-decoration-line: underline !important;
  text-underline-offset: 4px;
}

.prose code {
  color: hsl(0, 90%, 68%);
  background-color: hsla(347, 78%, 68%, 0.1);
  border-radius: 2px;
  font-size: 0.87em;
  padding: 0.065em 0.4em;
}

.prose code::before {
  content: "";
}

.prose code::after {
  content: "";
}

.prose pre.astro-code code {
  padding: 0;
  background: none;
  font-size: 1.05em;
  font-family: MONACO, Consolas, 'Courier New', monospace;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html.dark .prose pre.astro-code {
  background-color: hsl(231, 30%, 12%) !important;
}

html.dark .prose img {
  filter: brightness(0.8);
}

#toc {
  display: none;
}

#toc + ul {
  position: fixed;
  top: 80px;
  right: 0px;
  bottom: 0;
  width: 200px;
  padding: 0;
  font-size: 0.85em;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow-x: hidden;
  overflow-y: auto;
  transition: all 0.4s ease-out;
  opacity: 0;
  pointer-events: none;
}

#toc + ul li {
  margin: 0;
  padding: 0;
  list-style: none;
}
#toc + ul ul {
  margin: 0;
}

#toc + ul a {
  color: hsl(218, 11%, 65%);
  transition: all 0.2s ease-in-out;
}

#toc + ul a:hover {
  color: gray;;
}

@media (max-width: 1200px) {
  #toc + ul {
    display: none;
  }
}

.active {
  color: gray !important;
  text-decoration: underline !important;
  text-underline-offset: 4px;
}

